cm changer en px

--- a/CSS/lien_portfolio.css
+++ b/CSS/lien_portfolio.css
@@ -40,7 +40,7 @@ ul{
 h1{
     padding-top: 30px;
     color: green;
-    font-size: 2cm;
+    font-size: 2px;
     text-align: center;
     font-weight: bold;
     font-family: 'Courier New', Courier, monospace;
