--- a/CSS/travail_5.css
+++ b/CSS/travail_5.css
@@ -40,7 +40,7 @@ ul {
 h1{
     padding-top: 30px;
     color: green;
-    font-size: 1.5cm;
+    font-size: 25px;
     text-align: center;
     text-decoration: underline;
 }
