--- a/CSS/Pressbook.css
+++ b/CSS/Pressbook.css
@@ -39,7 +39,7 @@ ul {
 
 .titre{
     color: green;
-    font-size: 2.5cm;
+    font-size: 100px;
     text-align: center;
     font-weight: bold;
     font-family: 'Courier New', Courier, monospace;
@@ -51,7 +51,7 @@ ul {
 
  .nom_prenom{
     color: black;
-    font-size: 1.5cm;
+    font-size: 60px;
     text-align: center;
     font-family: 'Courier New', Courier, monospace;
     position: absolute;
