--- a/CSS/lien_contact.css
+++ b/CSS/lien_contact.css
@@ -1,7 +1,7 @@
 h1{
     padding-top: 30px;
     color: green;
-    font-size: 2cm;
+    font-size: 70px;
     text-align: center;
     font-weight: bold;
     font-family: 'Courier New', Courier, monospace;  
@@ -9,7 +9,7 @@ h1{
 
 h2{
     color: black;
-    font-size: 1.2cm;
+    font-size: 55px;
     text-align: justify;
     font-weight: bold;
     font-family: 'Courier New', Courier, monospace;
@@ -21,7 +21,7 @@ h2{
 
 .info_perso{
     color: black;
-    font-size: 0.8cm;
+    font-size: 30px;
     text-align: justify;
     position: absolute;
     top: 50%;
