--- a/CSS/lien_portfolio.css
+++ b/CSS/lien_portfolio.css
@@ -40,17 +40,19 @@ ul{
 h1{
     padding-top: 30px;
     color: green;
-    font-size: 2px;
+    font-size: 70px;
     text-align: center;
     font-weight: bold;
     font-family: 'Courier New', Courier, monospace;
 }
 
 .gallery {
-    margin: 25px;
+    
+     margin: 25px;
     border: 1px solid rgb(0, 0, 0);
-    float: left;
+    display: inline-block;
     height: 300px;
+   
 }
 
 img:hover {
@@ -59,13 +61,15 @@ img:hover {
 }
 
 .gallery img {
-    height: 100%;
+    height:100%;
     width: auto;
 }
 
 .desc {
-    padding: 20px;
+    padding: 10px;
     text-align: center;
+    font-weight: bold;
+    font-size: 20px;
 }
 
 body{
