--- a/CSS/lien_contact.css
+++ b/CSS/lien_contact.css
@@ -1,35 +1,3 @@
-h1{
-    padding-top: 30px;
-    color: green;
-    font-size: 70px;
-    text-align: center;
-    font-weight: bold;
-    font-family: 'Courier New', Courier, monospace;  
-}
-
-h2{
-    color: black;
-    font-size: 55px;
-    text-align: justify;
-    font-weight: bold;
-    font-family: 'Courier New', Courier, monospace;
-    position: absolute;
-    top: 30%;
-    left: 15%;
-    transform: translate(-50%, -50%);
-}
-
-.info_perso{
-    color: black;
-    font-size: 30px;
-    text-align: justify;
-    position: absolute;
-    top: 50%;
-    left: 20%;
-    transform: translate(-50%, -50%);
-}
-
-
 ul {
     list-style-type: none;
     margin: 0;
@@ -41,10 +9,6 @@ ul {
 li {
     float: left;
     border-right:1px solid #bbb;
-}
-
-#contact{
-    float: right;
 }
 
 li a {
@@ -69,17 +33,58 @@ ul {
     width: 100%;
 }
 
-img{
+#contact{
+    float: right;
+}
+
+h1{
+    padding-top: 30px;
+    color: green;
+    font-size: 70px;
+    text-align: center;
+    font-weight: bold;
+    font-family: 'Courier New', Courier, monospace;  
+}
+
+h2{
+    color: black;
+    font-size: 55px;
+    text-align: justify;
+    font-weight: bold;
+    font-family: 'Courier New', Courier, monospace;
+    position: absolute;
+    top: 40%;
+    left: 65%;
+    transform: translate(-50%, -50%);
+}
+
+.info_perso{
+    color: black;
+    font-size: 30px;
+    text-align: justify;
+    position: absolute;
+    top: 60%;
+    left: 70%;
+    transform: translate(-50%, -50%);
+}
+
+#photo_profil{
     width: 700px;
     position: absolute;
-    right: 300px;
-    top: 300px;
+    left: 10% ;
+    top: 35%;
     z-index: -1;
     box-shadow: 8px 8px 12px rgb(90, 88, 88);
     border-radius: 20px;
 }
 
-body{
-    background-color: rgba(133, 127, 127, 0.774)
+#image_fond {
+   opacity: 0.5;
+    filter:alpha(opacity=30) 
+    background-position: right;
+    width: 900px;
+    position: absolute;
+    right: 0px;
+    top: 30px;
+    z-index: -1;
 }
-
