--- a/CSS/lien_contact.css
+++ b/CSS/lien_contact.css
@@ -46,45 +46,101 @@ h1{
     font-family: 'Courier New', Courier, monospace;  
 }
 
-h2{
-    color: black;
-    font-size: 55px;
-    text-align: justify;
-    font-weight: bold;
-    font-family: 'Courier New', Courier, monospace;
-    position: absolute;
-    top: 40%;
-    left: 65%;
-    transform: translate(-50%, -50%);
+@media screen and (min-width: 1650px){
+
+    h2{
+        color: black;
+        font-size: 55px;
+        text-align: justify;
+        font-weight: bold;
+        font-family: 'Courier New', Courier, monospace;
+        position: absolute;
+        top: 40%;
+        left: 65%;
+        transform: translate(-50%, -50%);
+    }
+
+    .info_perso{
+        color: black;
+        font-size: 30px;
+        text-align: justify;
+        position: absolute;
+        top: 60%;
+        left: 70%;
+        transform: translate(-50%, -50%);
+    }
+
+    #photo_profil{
+        width: 700px;
+        position: absolute;
+        left: 10% ;
+        top: 35%;
+        z-index: -1;
+        box-shadow: 8px 8px 12px rgb(90, 88, 88);
+        border-radius: 20px;
+    }
+
+    #image_fond {
+    opacity: 0.5;
+        filter:alpha(opacity=30);
+        background-position: right;
+        width: 900px;
+        position: absolute;
+        right: 0px;
+        top: 30px;
+        z-index: -1;
+    }
+
 }
 
-.info_perso{
-    color: black;
-    font-size: 30px;
-    text-align: justify;
-    position: absolute;
-    top: 60%;
-    left: 70%;
-    transform: translate(-50%, -50%);
+@media screen and (max-width: 1650px){
+
+    body{
+        text-align: center;
+    }
+
+    h2{
+        color: black;
+        font-size: 55px;
+        font-weight: bold;
+        font-family: 'Courier New', Courier, monospace;
+        top: 40%;
+        left: 65%;     
+    }
+
+    .info_perso{
+        color: black;
+        font-size: 30px;
+        top: 60%;
+        left: 70%;
+    }
+
+    #photo_profil{
+        width: 700px;
+        left: 10% ;
+        top: 35%;
+        box-shadow: 8px 8px 12px rgb(90, 88, 88);
+        border-radius: 20px;
+
+    }
+
+    #image_fond {
+    opacity: 0.5;
+        filter:alpha(opacity=30);
+        background-position: right;
+        width: 900px;
+        position: absolute;
+        right: 0px;
+        top: 30px;
+        z-index: -1;
+    }
+
 }
 
-#photo_profil{
-    width: 700px;
-    position: absolute;
-    left: 10% ;
-    top: 35%;
-    z-index: -1;
-    box-shadow: 8px 8px 12px rgb(90, 88, 88);
-    border-radius: 20px;
-}
+@media screen and (max-width: 750px) {
 
-#image_fond {
-   opacity: 0.5;
-    filter:alpha(opacity=30) 
-    background-position: right;
-    width: 900px;
-    position: absolute;
-    right: 0px;
-    top: 30px;
-    z-index: -1;
+    #photo_profil{
+    width: 85%;    
+    }
+
 }
