--- a/CSS/lien_portfolio.css
+++ b/CSS/lien_portfolio.css
@@ -57,7 +57,6 @@ h1{
 
 img:hover {
     opacity: 0.6;
-    filter: alpha(opacity=50);
 }
 
 .gallery img {
@@ -73,5 +72,6 @@ img:hover {
 }
 
 body{
-    background-color: rgba(133, 127, 127, 0.774)
+    text-align: center;
+    background-color: rgba(224, 233, 215, 0.774);
 }
