--- a/CSS/travail_1.css
+++ b/CSS/travail_1.css
@@ -11,10 +11,6 @@ li {
     border-right:1px solid #bbb;
 }
 
-#contact{
-    float: right;
-}
-
 li a {
     display: block;
     color: white;
@@ -37,6 +33,10 @@ ul {
     width: 100%;
 }
 
+#contact{
+    float: right;
+}
+
 h1{
     padding-top: 40px;
     color: green;
@@ -48,25 +48,28 @@ h1{
 p{
     color: rgb(0, 0, 0);
     font-size: 15px;
-    text-align: left;
+    text-align: justify;
     font-style: normal;
 }
 
 h2{
     color: rgb(63, 63, 63);
     font-size: 19px;
-    text-align: left;
+    text-align: center;
     font-style: italic;
     font-weight: bold;
 }
 
 img:hover {
     opacity: 0.7;
-    filter: alpha(opacity=50);
 }
 
 img{
     width: 700px;
     padding: 10px;
     box-shadow: 0px 0px 17px #bbb;
+}
+
+body{
+    text-align: center;
 }
