--- a/CSS/travail_14.css
+++ b/CSS/travail_14.css
@@ -48,25 +48,28 @@ h1{
 p{
     color: rgb(0, 0, 0);
     font-size: 20px;
-    text-align: left;
+    text-align: justify;
     font-style: normal;
 }
 
 h2{
     color: rgb(63, 63, 63);
     font-size: 19px;
-    text-align: left;
+    text-align: center;
     font-style: italic;
     font-weight: bold;
 }
 
 img:hover {
     opacity: 0.7;
-    filter: alpha(opacity=50);
 }
 
 img{
     width: 700px;
     padding: 10px;
     box-shadow: 0px 0px 17px #bbb;
+}
+
+body{
+    text-align: center;
 }
