correction css simplifier

--- a/CSS/lien_portfolio.css
+++ b/CSS/lien_portfolio.css
@@ -73,5 +73,5 @@ img:hover {
 
 body{
   text-align: center;
-  background-image: url("../Photos/photo_fond.jpg")
+  background-image: url("../Photos/photo_fond.jpg");
 }
