--- a/CSS/travaux.css
+++ b/CSS/travaux.css
@@ -38,16 +38,16 @@ ul {
 }
 
 h1{
-    padding-top: 40px;
+    padding-top: 50px;
     color: green;
-    font-size: 25px;
+    font-size: 30px;
     text-align: center;
     text-decoration: underline;
 }
 
 p{
     color: rgb(0, 0, 0);
-    font-size: 15px;
+    font-size: 20px;
     text-align: justify;
     font-style: normal;
 }
@@ -67,7 +67,7 @@ img:hover {
 img{
     width: 700px;
     padding: 10px;
-    box-shadow: 0px 0px 17px #bbb;
+    box-shadow: 0px 0px 17px rgb(163, 161, 161);
 }
 
 body{
